<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginStart="@dimen/activity_padding"
        android:layout_marginTop="@dimen/activity_padding"
        android:layout_marginBottom="@dimen/activity_padding"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_netology"
        tools:srcCompat="@drawable/ic_netology" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_padding"
        android:layout_marginEnd="@dimen/activity_padding"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_padding"
        android:layout_marginEnd="@dimen/activity_padding"
        android:layout_marginBottom="@dimen/activity_padding"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_padding"
        android:backgroundTint="@android:color/transparent"
        android:checkable="true"
        android:contentDescription="@string/description_post_menu"
        app:icon="@drawable/ic_more_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/author" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu"
        tools:layout_editor_absoluteY="80dp" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="@+id/menu"
        app:layout_constraintStart_toStartOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/textPosts" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="236dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/icon_button_padding_top"
        android:layout_marginBottom="@dimen/checkbox_padding_start"
        android:checkable="true"
        android:contentDescription="@string/description_post_like"
        android:textColor="@color/text_tint"
        app:backgroundTint="@android:color/transparent"
        app:icon="@drawable/ic_like_24dp"
        app:iconTint="@color/like_checkbox_tint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/content"
        app:layout_constraintTop_toBottomOf="@id/barrierTwo"
        tools:checked="@sample/posts.json/data/likedByMe"
        tools:text="@sample/posts.json/data/likes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/repost"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/checkbox_padding_start"
        android:checkable="true"
        android:contentDescription="@string/description_post_share"
        android:textColor="@color/text_tint"
        app:backgroundTint="@android:color/transparent"
        app:icon="@drawable/ic_share_24dp"
        app:iconTint="@color/like_checkbox_tint"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toTopOf="@+id/like"
        tools:checked="@sample/posts.json/data/repostByMe"
        tools:text="@sample/posts.json/data/repost" />

    <ImageButton
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/description_post_views"
        app:layout_constraintBottom_toBottomOf="@+id/repost"
        app:layout_constraintEnd_toEndOf="@+id/content"
        app:layout_constraintTop_toTopOf="@+id/repost"
        app:srcCompat="@drawable/ic_baseline_visibility_24" />


</androidx.constraintlayout.widget.ConstraintLayout>